# StarForge

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
crates/starforge-wasm/: Cargo.toml
crates/starforge-wasm/src/: lib.rs
src/: App.css  App.tsx  index.css
src/components/: EditorView.tsx  ElementTree.tsx  FileLoader.tsx  PropertiesPanel.tsx  SWFCanvas.tsx
src/hooks/: useWasm.ts
src/lib/: ba2.ts  swfTypes.ts
